Добавил css стили к файлу App.tsx и LotteryRandomNumber.tsx. Исправлены недочеты
Добавлен новый файл LotteryRandomNumber.css и написаны стили для рандомных чисел, добавлена анимация
Добавлен css для App.tsx
Сделана логика чисел от меньшего к большему
Добавлен задний фон с помощью css в index.html
Переделаны мелкие недочеты

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  background: url("../public/lotter-backrgound.jpg") center no-repeat;
+  background-size: 100%;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
