--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,30 @@
   padding: 2rem;
   text-align: center;
 }
+
+.main-title {
+  font-weight: bold;
+  font-size: 35px;
+  background-color: rgba(255, 211, 0, 0.69);
+  border-radius: 10px;
+  color: white;
+}
+
+.btn-number {
+  border: 2px solid #a4a4a4;
+  background-color: #e0e0e0;
+}
+
+.btn-number:hover {
+  color: #fff;
+  background-color: #000;
+  border: 2px solid #4f4f4f;
+}
+
+.main-block {
+  margin: 80px auto;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: rgba(255, 211, 0, 0.69);
+  border-radius: 10px;
+}
